--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X5C3R2KBBZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X5C3R2KBBZ');
+    </script>
     <meta charset="utf-8" lang="ko">
     <!-- End of headStart -->
     <meta name="viewport" content="width=device-width">
