feat: naver seo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta name="naver-site-verification" content="7128456ba49fbacc070ed465cd03f78801856a06" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X5C3R2KBBZ"></script>
     <script>
