--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8" lang="ko">
     <!-- End of headStart -->
     <meta name="viewport" content="width=device-width">
-    <title>나와의 대화 | 나와의 대화를 통해 찾아가는 나만의 가치</title>
+    <title>나와의 대화</title>
     <meta name="description" content="나와의 대화를 통해 찾아가는 나만의 가치">
     <link rel="icon" href="/favicon.ico">
     <!-- Open Graph / Facebook -->
