feat: 파비콘 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width">
     <title>나와의 대화</title>
     <meta name="description" content="나와의 대화를 통해 찾아가는 나만의 가치">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="나와의 대화">
